--- a/keycloak/keycloak-operator/templates/keycloak-subscription.yaml
+++ b/keycloak/keycloak-operator/templates/keycloak-subscription.yaml
@@ -2,10 +2,11 @@
 apiVersion: operators.coreos.com/v1alpha1
 kind: Subscription
 metadata:
-  name: {{ include "keycloak.name" . }}-operator
-  namespace: {{ include "keycloak.namespace" . }}
+  name: {{ include "keycloak-operator.name" . }}-operator
+  namespace: {{ include "keycloak-operator.namespace" . }}
   annotations:
-    argocd.argoproj.io/sync-wave: "-1"
+  annotations:
+    {{- include "keycloak-operator.argocd-syncwave" . | nindent 4 }}
 spec:
   channel: {{ .Values.keycloak.subscription.channel }}
   installPlanApproval: {{ .Values.keycloak.subscription.installPlanApproval }}
