--- a/keycloak/keycloak-realm-import/values.yaml
+++ b/keycloak/keycloak-realm-import/values.yaml
@@ -23,6 +23,11 @@ hook:
         - ALL
   maxTimeToWait: 120000
 
+users:
+  count: 5
+  prefix: user
+  password:
+
 argocd:
   enabled: true
   syncwave: "-1"
