Realm client for backstage

--- a/keycloak/keycloak-realm-import/templates/keycloak-realmimport.yaml
+++ b/keycloak/keycloak-realm-import/templates/keycloak-realmimport.yaml
@@ -115,24 +115,24 @@ spec:
             composites:
               client:
                 realm-management:
-                - view-events
-                - impersonation
-                - view-identity-providers
-                - query-realms
-                - view-clients
-                - query-clients
-                - view-authorization
-                - view-users
-                - manage-authorization
-                - manage-users
-                - manage-realm
-                - manage-clients
-                - query-groups
-                - manage-events
-                - query-users
-                - create-client
-                - manage-identity-providers
-                - view-realm
+                  - view-events
+                  - impersonation
+                  - view-identity-providers
+                  - query-realms
+                  - view-clients
+                  - query-clients
+                  - view-authorization
+                  - view-users
+                  - manage-authorization
+                  - manage-users
+                  - manage-realm
+                  - manage-clients
+                  - query-groups
+                  - manage-events
+                  - query-users
+                  - create-client
+                  - manage-identity-providers
+                  - view-realm
             clientRole: true
             containerId: {{ $clientRealmManagementContainerId }}
             attributes: {}
@@ -157,7 +157,7 @@ spec:
             composites:
               client:
                 realm-management:
-                - query-clients
+                  - query-clients
             clientRole: true
             containerId: {{ $clientRealmManagementContainerId }}
             attributes: {}
@@ -189,8 +189,8 @@ spec:
             composites:
               client:
                 realm-management:
-                - query-groups
-                - query-users
+                  - query-groups
+                  - query-users
             clientRole: true
             containerId: {{ $clientRealmManagementContainerId }}
             attributes: {}
@@ -290,7 +290,7 @@ spec:
             composites:
               client:
                 account:
-                - view-consent
+                  - view-consent
             clientRole: true
             containerId: {{ $accountContainerId }}
             attributes: {}
@@ -329,7 +329,7 @@ spec:
             composites:
               client:
                 account:
-                - manage-account-links
+                  - manage-account-links
             clientRole: true
             containerId: {{ $accountContainerId }}
             attributes: {}
@@ -402,7 +402,7 @@ spec:
     scopeMappings:
         - clientScope: offline_access
           roles:
-          - offline_access
+            - offline_access
     clientScopeMappings:
       account:
         - client: account-console
@@ -530,6 +530,84 @@ spec:
           - phone
           - offline_access
           - microprofile-jwt
+      - id: {{ uuidv4 }}
+        clientId: {{ .Values.realm.name }}
+        surrogateAuthRequired: false
+        enabled: true
+        alwaysDisplayInConsole: false
+        clientAuthenticatorType: client-secret
+        secret: {{ include "keycloak-realmimport.client-backstage-secret" . }}
+        redirectUris:
+          - {{ .Values.backstage.redirectUri }}
+        webOrigins:
+          - '{{ .Values.backstage.webOrigin }}'
+        notBefore: 0
+        bearerOnly: false
+        consentRequired: false
+        standardFlowEnabled: true
+        implicitFlowEnabled: false
+        directAccessGrantsEnabled: true
+        serviceAccountsEnabled: true
+        publicClient: false
+        frontchannelLogout: true
+        protocol: openid-connect
+        attributes:
+          oidc.ciba.grant.enabled: 'false'
+          backchannel.logout.session.required: 'true'
+          display.on.consent.screen: 'false'
+          oauth2.device.authorization.grant.enabled: 'false'
+          backchannel.logout.revoke.offline.tokens: 'false'
+        authenticationFlowBindingOverrides: {}
+        fullScopeAllowed: true
+        nodeReRegistrationTimeout: -1
+        protocolMappers:
+          - id: {{ uuidv4 }}
+            name: Client IP Address
+            protocol: openid-connect
+            protocolMapper: oidc-usersessionmodel-note-mapper
+            consentRequired: false
+            config:
+              user.session.note: clientAddress
+              introspection.token.claim: 'true'
+              id.token.claim: 'true'
+              access.token.claim: 'true'
+              claim.name: clientAddress
+              jsonType.label: String
+          - id: {{ uuidv4 }}
+            name: Client ID
+            protocol: openid-connect
+            protocolMapper: oidc-usersessionmodel-note-mapper
+            consentRequired: false
+            config:
+              user.session.note: client_id
+              introspection.token.claim: 'true'
+              id.token.claim: 'true'
+              access.token.claim: 'true'
+              claim.name: client_id
+              jsonType.label: String
+          - id: {{ uuidv4 }}
+            name: Client Host
+            protocol: openid-connect
+            protocolMapper: oidc-usersessionmodel-note-mapper
+            consentRequired: false
+            config:
+              user.session.note: clientHost
+              introspection.token.claim: 'true'
+              id.token.claim: 'true'
+              access.token.claim: 'true'
+              claim.name: clientHost
+              jsonType.label: String
+        defaultClientScopes:
+          - profile
+          - roles
+          - email
+        optionalClientScopes:
+          - web-origins
+          - acr
+          - address
+          - phone
+          - offline_access
+          - microprofile-jwt
       - id: {{ $clientBrokerContainerId }}
         clientId: broker
         name: "${client_broker}"
@@ -585,7 +663,8 @@ spec:
         publicClient: false
         frontchannelLogout: false
         protocol: openid-connect
-        attributes: {}
+        attributes:
+          post.logout.redirect.uris: "+"
         authenticationFlowBindingOverrides: {}
         fullScopeAllowed: false
         nodeReRegistrationTimeout: 0
@@ -1704,7 +1783,7 @@ spec:
       parRequestUriLifespan: '60'
       cibaInterval: '5'
       realmReusableOtpCode: 'false'
-    keycloakVersion: 24.0.6.redhat-00001
+    keycloakVersion: 24.0.7.redhat-00004
     userManagedAccessAllowed: false
     clientProfiles:
       profiles: []
