--- a/keycloak/keycloak-realm-import/values.yaml
+++ b/keycloak/keycloak-realm-import/values.yaml
@@ -28,6 +28,11 @@ users:
   prefix: user
   password:
 
+backstage:
+  redirectUri:
+  webOrigin:
+  secret:
+
 argocd:
   enabled: true
   syncwave: "-1"
