Fixed secret yaml

--- a/quay/quay-registry/templates/config-bundle-secret.yaml
+++ b/quay/quay-registry/templates/config-bundle-secret.yaml
@@ -7,8 +7,8 @@ metadata:
     {{- include "quay-registry.labels" . | nindent 4 }}
   annotations:
     {{- include "quay-registry.quay.argocd-syncwave" . | nindent 4 }}
-stringdata:
-  config.yaml:
+stringData:
+  config.yaml: |-
     REGISTRY_TITLE: {{ .Values.quay.displayName }}
     SERVER_HOSTNAME: {{ .Values.quay.host }}
     EXTERNAL_TLS_TERMINATION: {{ .Values.quay.tls }}
