Quay config job

--- a/quay/quay-registry/templates/config-bundle-secret.yaml
+++ b/quay/quay-registry/templates/config-bundle-secret.yaml
@@ -14,6 +14,6 @@ stringData:
     EXTERNAL_TLS_TERMINATION: {{ .Values.quay.tls }}
     {{- if .Values.quay.configureAdmin }}
     SUPER_USERS:
-    - {{ .Values.quay.superUser }}
+    - {{ .Values.quay.adminUser }}
     FEATURE_USER_INITIALIZE: {{ .Values.quay.userInitialize }}
     {{- end }}
