--- a/quay/quay-registry/templates/cm-config.yaml
+++ b/quay/quay-registry/templates/cm-config.yaml
@@ -37,7 +37,7 @@ data:
           delay: 10
         - name: Create QuayAdmin user
           ansible.builtin.uri:
-            url: '{{ "{{" }} r_quay_registry.resources[0].status.registryEndpoint {{ "}}" }}/api/v1/user/initialize"
+            url: '{{ "{{" }} r_quay_registry.resources[0].status.registryEndpoint {{ "}}" }}/api/v1/user/initialize'
             method: POST
             body:
               username: "{{ .Values.quay.adminUser }}"
@@ -67,7 +67,7 @@ data:
             api_version: apps/v1
             kind: Deployment
             name: {{ include "quay-registry.name" . }}-quay-database
-            namespace: {{ .Release.Namespace}}
+            namespace: {{ .Release.Namespace }}
           register: r_quay_database_deployment
           retries: 10
           delay: 5
@@ -83,7 +83,7 @@ data:
           kubernetes.core.k8s_info:
             api_version: v1
             kind: Pod
-            namespace: {{ .Release.Namespace}}
+            namespace: {{ .Release.Namespace }}
             label_selectors:
               - quay-component = postgres
           register: r_quay_database_pod
@@ -99,7 +99,7 @@ data:
         # Ignore errors in case it found the wrong pod name. Next task will remain as failsafe
         - name: Extend Quay token expiration
           kubernetes.core.k8s_exec:
-            namespace: {{ .Release.Namespace}}
+            namespace: {{ .Release.Namespace }}
             pod: '{{ "{{" }} r_quay_database_pod.resources[0].metadata.name {{ "}}" }}'
             command: >-
               psql -d quay-quay-database -c "update public.oauthaccesstoken set expires_at = '2300-12-31 00:00:00' where id = 1;"
