--- a/external-secrets/Chart.yaml
+++ b/external-secrets/Chart.yaml
@@ -9,3 +9,6 @@ dependencies:
     alias: external-secrets
     repository: https://charts.external-secrets.io
     version: 0.9.2
+  - name: vault-integration
+    version: 0.1.0
+    repository: file://vault-integration
