clusterrole and clusterrolebinding

--- a/gitops/templates/argocd.yaml
+++ b/gitops/templates/argocd.yaml
@@ -4,6 +4,8 @@ metadata:
   finalizers:
     - argoproj.io/finalizer
   name: {{ include "gitops.name" . }}
+  labels:
+    {{- include "gitops.labels" . | nindent 4 }}
   annotations:
     argocd.argoproj.io/compare-options: IgnoreExtraneous
 spec:
