--- a/keycloak/keycloak-realm-import/values.yaml
+++ b/keycloak/keycloak-realm-import/values.yaml
@@ -29,10 +29,12 @@ groups:
 
 client:
   backstage:
+    name:
     redirectUri:
     webOrigin:
     secret:
   backstagePlugin:
+    name:
     redirectUri:
     webOrigin:
     secret:
