fix gitlab token name

--- a/redhat-developer-hub/redhat-developer-hub-prereqs/templates/secret-backstage-gitlab-token.yaml
+++ b/redhat-developer-hub/redhat-developer-hub-prereqs/templates/secret-backstage-gitlab-token.yaml
@@ -1,7 +1,7 @@
 kind: Secret
 apiVersion: v1
 metadata:
-  name: {{ include "redhat-developer-hub-prereqs.name" . }}-gitlab-token
+  name: gitlab-token
   labels:
     {{- include "redhat-developer-hub-prereqs.labels" . | nindent 4 }}
   annotations:
