add kubernetes sa token secret

--- a/redhat-developer-hub/redhat-developer-hub-prereqs/templates/secret-backstage-kubernetes-sa-token.yaml
+++ b/redhat-developer-hub/redhat-developer-hub-prereqs/templates/secret-backstage-kubernetes-sa-token.yaml
@@ -1,11 +1,11 @@
 kind: Secret
 apiVersion: v1
 metadata:
-  name: argocd-password
+  name: kubernetes-sa-token
   labels:
     {{- include "redhat-developer-hub-prereqs.labels" . | nindent 4 }}
   annotations:
     {{- include "redhat-developer-hub-prereqs.argocd-syncwave" . | nindent 4 }}
 stringData:
-  ARGOCD_PASSWORD: {{ .Values.backstage.argocd.password }}
+  KUBERNETES_SA_TOKEN: {{ .Values.backstage.kubernetes.sa_token }}
 type: Opaque
