--- a/parasol/templates/parasol-web-templates.yaml
+++ b/parasol/templates/parasol-web-templates.yaml
@@ -1,6 +1,6 @@
 kind: ConfigMap
 metadata:
-  name:  parasol-store-templates
+  name:  parasol-web-templates
   annotations:
     argocd.argoproj.io/sync-wave: "1"
 apiVersion: v1
@@ -28,7 +28,7 @@ data:
           ansible.builtin.command: git config --global user.name "{{ $.Values.gitlab.email.displayName }}"
           ignore_errors: true
 
-{{- range $item := .Values.parasol.store.templates }}
+{{- range $item := .Values.parasol.web.templates }}
 
         - name: Build git repo url
           ansible.builtin.set_fact:
@@ -77,18 +77,22 @@ data:
             dest: /tmp/{{ $item.project }}/{{ $item1 }}
             mode: "0660"         
           vars:
-            parasol_store_argocd_name: "{{ $.Values.parasol.store.argocd.name }}"
-            parasol_store_argocd_namespace: "{{ $.Values.parasol.store.argocd.namespace }}"
-            parasol_store_repo_url: "https://{{ $.Values.gitlab.host }}/{{ $.Values.parasol.group }}/{{ $item.project }}.git"
-            parasol_store_repo_revision: "{{ $item.branch }}"
-            parasol_store_namespace: "{{ $item.namespace }}"
-            parasol_store_image_registry_host: "{{ $item.image.host }}"
-            parasol_store_image_registry_organization: "{{ $item.image.organization }}"
-            parasol_store_image_registry_image_name: "{{ $item.image.name }}"
-            parasol_store_image_registry_image_tag: "{{ $item.image.tag }}"
-            parasol_store_image_registry_username: "{{ $.Values.registry.username }}"
-            parasol_store_image_registry_password: "{{ $.Values.registry.password }}"
-
+            parasol_web_argocd_name: "{{ $.Values.parasol.web.argocd.name }}"
+            parasol_web_argocd_namespace: "{{ $.Values.parasol.web.argocd.namespace }}"
+            parasol_web_repo_url: "https://{{ $.Values.gitlab.host }}/{{ $.Values.parasol.group }}/{{ $item.project }}.git"
+            parasol_web_repo_revision: "{{ $item.branch }}"
+            parasol_web_namespace: "{{ $item.namespace }}"
+            parasol_web_image_registry_host: "{{ $item.image.host }}"
+            parasol_web_image_registry_organization: "{{ $item.image.organization }}"
+            parasol_web_image_registry_image_name: "{{ $item.image.name }}"
+            parasol_web_image_registry_image_tag: "{{ $item.image.tag }}"
+            parasol_web_image_registry_username: "{{ $.Values.registry.username }}"
+            parasol_web_image_registry_password: "{{ $.Values.registry.password }}"
+            parasol_web_store_app_url: "{{ $.Values.store.url }}"
+            parasol_web_store_app_service: "{{ $.Values.store.service }}"
+            parasol_web_sso_url: "{{ $.Values.sso.url }}"
+            parasol_web_sso_client: "{{ $.Values.sso.client }}"
+            parasol_web_sso_logout_url: "{{ $.Values.sso.logoutUrl }}"
 {{- end }}
 
         - name: Add new files to the repository
