--- a/parasol/Chart.yaml
+++ b/parasol/Chart.yaml
@@ -3,3 +3,11 @@ name: parasol
 description: A Helm chart for Kubernetes
 type: application
 version: 0.1.0
+
+dependencies:
+  - name: keycloak-realm-import
+    version: 0.1.0
+    repository: file://keycloak-realm-import
+  - name: parasol
+    version: 0.1.0
+    repository: file://parasol
