namespace for keycloak import

--- a/parasol/keycloak-realm-import/templates/keycloak-realmimport.yaml
+++ b/parasol/keycloak-realm-import/templates/keycloak-realmimport.yaml
@@ -10,6 +10,7 @@ metadata:
   labels:
     {{- include "keycloak-realmimport.labels" $ | nindent 4 }}
     app: keycloak
+  namespace: {{ $.Values.keycloak.namespace }}
 spec:
   keycloakCRName: {{ $.Values.keycloak.name }}
   realm:
