--- a/parasol/keycloak-realm-import/templates/hooks/job.yaml
+++ b/parasol/keycloak-realm-import/templates/hooks/job.yaml
@@ -27,9 +27,7 @@ spec:
           imagePullPolicy: {{ .Values.hook.image.pullPolicy }}
           env:
             - name: NAMESPACE
-              valueFrom:
-                fieldRef:
-                  fieldPath: metadata.namespace
+              value: {{ .Values.keycloak.namespace }}
             - name: STATEFULSET
               value: {{ .Values.keycloak.name }}
             - name: MAX_TIME_TO_WAIT_MS
