copy images from quay into workshop registry + refactoring

--- a/parasol/parasol/templates/parasol-store-templates.yaml
+++ b/parasol/parasol/templates/parasol-store-templates.yaml
@@ -82,10 +82,10 @@ data:
             parasol_store_repo_url: "https://{{ $.Values.gitlab.host }}/{{ $.Values.parasol.group }}/{{ $item.project }}.git"
             parasol_store_repo_revision: "{{ $item.branch }}"
             parasol_store_namespace: "{{ $item.namespace }}"
-            parasol_store_image_registry_host: "{{ $item.image.host }}"
-            parasol_store_image_registry_organization: "{{ $item.image.organization }}"
-            parasol_store_image_registry_image_name: "{{ $item.image.name }}"
-            parasol_store_image_registry_image_tag: "{{ $item.image.tag }}"
+            parasol_store_image_registry_host: "{{ $.Values.registry.host }}"
+            parasol_store_image_registry_organization: "{{ $.Values.registry.organization }}"
+            parasol_store_image_registry_image_name: "{{ $.Values.parasol.store.image.name }}"
+            parasol_store_image_registry_image_tag: "{{ $.Values.parasol.store.image.tag }}"
             parasol_store_image_registry_username: "{{ $.Values.registry.username }}"
             parasol_store_image_registry_password: "{{ $.Values.registry.password }}"
 
