--- a/parasol/parasol/templates/parasol-web-templates.yaml
+++ b/parasol/parasol/templates/parasol-web-templates.yaml
@@ -82,10 +82,10 @@ data:
             parasol_web_repo_url: "https://{{ $.Values.gitlab.host }}/{{ $.Values.parasol.group }}/{{ $item.project }}.git"
             parasol_web_repo_revision: "{{ $item.branch }}"
             parasol_web_namespace: "{{ $item.namespace }}"
-            parasol_web_image_registry_host: "{{ $item.image.host }}"
-            parasol_web_image_registry_organization: "{{ $item.image.organization }}"
-            parasol_web_image_registry_image_name: "{{ $item.image.name }}"
-            parasol_web_image_registry_image_tag: "{{ $item.image.tag }}"
+            parasol_web_image_registry_host: "{{ $.Values.registry.host }}"
+            parasol_web_image_registry_organization: "{{ $.Values.registry.organization }}"
+            parasol_web_image_registry_image_name: "{{ $.Values.parasol.web.image.name }}"
+            parasol_web_image_registry_image_tag: "{{ $.Values.parasol.web.image.tag }}"
             parasol_web_image_registry_username: "{{ $.Values.registry.username }}"
             parasol_web_image_registry_password: "{{ $.Values.registry.password }}"
             parasol_web_store_app_url: "{{ $item.store.url }}"
