--- a/parasol/parasol-build/values.yaml
+++ b/parasol/parasol-build/values.yaml
@@ -1,4 +1,5 @@
 gitlab:
+  user: root
   rootPassword: openshift
   host: 
   email:
@@ -17,6 +18,18 @@ parasol:
     gitlab:
       group: parasol
       repo: parasol-store
+    manifests:
+      files:
+        dev: app/values/values-dev.yaml
+        staging: app/values/values-staging.yaml
+        prod: app/values/values-prod.yaml
+      gitlab:
+        group: parasol
+        repo: parasol-store-manifests
+        branch:
+          dev: main
+          staging: staging
+          prod: prod
 
 registry:
   host:
